*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8907 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -1,5 +1,6 @@
 #X-Generator: crowdin.net
 #used by translators to keep track. not used with foxtrick atm
+properties.translators=Développeurs
 
 # Hints:
 # translate the right side of the = sign.
@@ -125,6 +126,10 @@ foxtrick.MatchReportFormat.desc=Présentation du compte-rendu des matchs ligne p
 foxtrick.ForumRedirManagerToTeam.desc=Redirige les liens du Forum vers la page Général du club au lieu de la page Manager.
 foxtrick.HTThreadMarker.desc=Marque les sujets des Forums créés par les Officiels.
 foxtrick.TeamStats.desc=Ajoute une synthèse de l'équipe.
+foxtrick.TeamStats.General.desc=Informations générales (TSI/âge)
+foxtrick.TeamStats.Speciality.desc=Spécialité
+foxtrick.TeamStats.Personality.desc=Personnalité
+foxtrick.TeamStats.Current_league.desc=Ligue actuelle
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Ajoute le type et le niveau de l'entraineur.
 foxtrick.ExtraPlayerInfo.Flag.desc=Ajoute le drapeau de la nationalité des joueurs.
 foxtrick.HistoryStats.desc=Ajoute une synthèse de l'historique du club.
@@ -369,6 +374,17 @@ foxtrick.transferfilter.save_new_filter=Enregistrer le nouveau filtre
 foxtrick.transferfilter.Foxtrick_Filters=Filtres FoxTrick
 
 #Filter
+Filters=Filtres
+Filters.filter=Ok
+Filters.noFilter=Pas de filtre
+Filters.none=Aucun
+Filters.days=Jours
+Filters.tsi=TSI
+Filters.stamina=Endurance
+Filters.Form=Forme
+Filters.XP=Expérience
+Filters.specialty=Spécialité
+Filters.stars=Étoiles
 
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
@@ -384,6 +400,9 @@ foxtrick.datetimestrings.short_days=j
 transfercompare_medianprice=Prix médian
 transfercompare_avgprice=Prix moyen
 
+match.type.cup=Coupe
+match.type.friendly=Amical
+match.type.friendly.cup=Amical(règles de coupe)
 
 
 #Skills
@@ -417,9 +436,13 @@ categories.R=R
 categories.E1=E1
 categories.E2=E2
 
+match.pos.kp=Gardien
+
+match.role.captain=Capitaine
+match.role.captain.abbr=Cap.
 
 
-
+General=Général
 
 PlayerNumber=Numéro de maillot
 PlayerNumber.abbr=\#
@@ -427,6 +450,7 @@ PlayerNumber.abbr=\#
 TSI=Total Skill Index
 TSI.abbr=TSI
 
+CanBePromotedIn=Peut être promu dans
 
 Agreeability=Tempérament
 Agreeability.abbr=Te
@@ -446,6 +470,8 @@ Form=Forme
 Form.abbr=Fo
 
 
+Status=Statut
+Status.abbr=Statut
 
 Yellow_card=Carton Jaune
 Yellow_card.abbr=J
@@ -460,9 +486,11 @@ Last_match.abbr=Match
 Last_stars=Dernière Note
 Last_stars.abbr=No
 Last_stars_decline=Dernière baisse de star
+Last_stars_decline.abbr=Diff
 Last_position=Dernière Position
 Last_position.abbr=Pos
 #following string uses pluralForms
+Last_match_didnot_play=N'a pas encore joué.
 
 Bruised=Légèrement blessé
 Bruised.abbr=Bru
@@ -479,13 +507,20 @@ NrOfMatches=Nombre de matchs
 NrOfMatches.abbr=NM
 LeagueGoals=Buts en ligue cette saison
 LeagueGoals.abbr=BL
+CupGoals=Buts - Matchs de Coupe
+CupGoals.abbr=BC
+FriendliesGoals=Buts - matchs amicaux
+FriendliesGoals.abbr=BA
 CareerGoals=Buts dans sa carrière
 CareerGoals.abbr=BC
 Hattricks=Coups de chapeau
 
 Current_club=Équipe actuelle
 Current_club.abbr=Équipe
+Current_league=Ligue actuelle
+Current_league.abbr=Ligue
 
+JoinedSince.abbr=Depuis
 
 Hotlist=Les hors classe
 Hotlist.abbr=Hors classe
@@ -559,6 +594,13 @@ CopyRatings.away=Copier les performances détaillés de l'équipe jouant à l'ex
 CopyRatings.copied=Les performances détaillés ont été copiées dans le presse-papiers.
 
 
+MatchReportFormat.MatchReport=Résumé du Match
+MatchReportFormat.lineup=Composition des équipes
+MatchReportFormat.kickOff=Coup d'envoi
+MatchReportFormat.halfTime=Mi-temps
+MatchReportFormat.fullTime=Fin de Match
+MatchReportFormat.extraTime=Prolongation
+MatchReportFormat.result=Score final
 
 
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
@@ -603,6 +645,8 @@ LastLineup=Dernière composition de l'équipe
 YouthMatches=Matchs Équipe junior
 more=plus...
 less=moins...
+TeamPopupLinks.ShowByDefault=Défaut
+TeamPopupLinks.ShowOnMore=Plus
 TeamPopupLinks.OpenNewTab=Ouvrir dans un nouvel onglet
 
 total_stars=Nombre total d'étoiles
@@ -631,13 +675,28 @@ Age.abbr=Âge
 Match=Match
 Series=Poule
 
+Bookmark=Signet
+Deadline=Date limite
+Deadline.abbr=Date limite
+CurrentBid=Enchère en cours
+CurrentBid.abbr=Enchère
+CurrentBidder=Actuel meilleur enchérisseur
+CurrentBidder.abbr=Enchérisseur
+CurrentBidderShort=Actuel meilleur enchérisseur
 
 
+team.status.booked=Match amical arrangé
+ShowFriendlyBooked.ShowFriendlies=Afficher les matchs amicaux
 
 
 # TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Masquer les joueurs légèrement blessés
+TransferSearchResultFilters.hideInjured=Masquer les joueurs blessés
+TransferSearchResultFilters.hideSuspended=Masquer les joueurs suspendus
+TransferSearchResultFilters.days=Jours \:
 
 # refer to transfer search form
+maximum=Maximum
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 foxtrick.RapidId.ViewById=Recherche par ID
@@ -646,15 +705,19 @@ Youth=Junior
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Switch the view of the table.
+foxtrick.SkillTable.detach=Détacher
 
 # HTMSPrediction
 HTMSPrediction.title=Analyse du match par HTMS
 HTMSPrediction.changePrediction=Change prediction
+HTMSPrediction.team=Équipe
 
 #htms table of statistical truth
+truthTable.predicted_position=\#
 truthTable.name=Position actuelle.
 truthTable.real_points=Point actuels
 truthTable.predicted_points=Points prévus
+truthTable.difference=±
 
 # HTMSPoints
 
@@ -665,8 +728,11 @@ CrossTable.table=Résultats croisés
 CrossTable.noMatches=Personne ne s'est battu.
 
 # MyMonitor
+MyMonitor.header=Mon tableau de bord
 #following string uses pluralForms
 MyMonitor.add=Suivre cette équipe
+MyMonitor.remove=Supprimer cette équipe de mon tableau de bord
+MyMonitor.removeTeam=Sélectionnez une équipe a supprimer \:
 # %n, %t and %i will be replaced by team name, type and ID respectively
 MyMonitor.type.senior=senior
 MyMonitor.type.youth=Jeune
@@ -691,6 +757,7 @@ ticker.type.myht=Mon message de coup de chapeau
 # LocalTime
 LocalTime.hattrick=Temps de coup de chapeau
 LocalTime.hattrick.title=Heure dans le fuseau horaire de coup de chapeau. Cliquez sur l'horloge pour passer à l'heure locale.
+LocalTime.local=Heure locale
 
 # Links
 
@@ -698,10 +765,16 @@ LocalTime.hattrick.title=Heure dans le fuseau horaire de coup de chapeau. Clique
 Copy=Copier
 View=Voir
 Switch_view=Changer de vue
+Detach=Détacher
 AddHomegrown=Ajouter les joueurs locaux
 showTimeInClub=Afficher l'heure à l'équipe
+sort.up=Vers le haut
+sort.down=Vers le bas
+action.clearCache=Vider le cache
 
 # fennec ui
+pageAction.rightSidebar=Afficher la barre de droite
+pageAction.leftSidebar=Afficher la barre de gauche
 pageAction.all=Montrer tous
 
 # buttons
@@ -764,13 +837,24 @@ foxtrick.prefs.stagepref=Désactiver FoxTrick sur le serveur Stage
 foxtrick.prefs.disableTemporaryLabel=Désactiver FoxTrick temporairement
 
 
+link.screenshots=Captures d'écran
+link.nightlyFirefox=Développement pour Firefox
+link.nightlyChrome=Développement pour Google Chrome
+link.nightlyOpera=Développement pour l'opéra
+link.nightlySafari=Développement pour Safari
+link.recentChanges=Changements récents
 
 
 
+about.copyright=Droit d'auteur
+about.developers=Développeurs
+about.translators=Traducteurs
 
+prefs.view.by.category=Afficher par catégorie
 
 delete_foxtrick_branches_ask=Êtes-vous sûr que vous souhaitez restaurer les paramètres par défaut ?\nFirefox doit être redémarré pour prendre en compte les paramètres\!
 disable_all_foxtrick_modules_ask=Êtes-vous sûr de vouloir désactiver tous les modules ?\n
+revoke_permissions_ask=Êtes-vous sûr que vous voulez révoquer toutes les autorisations facultatives ?
 
 foxtrick.prefs.AdditionalOptions=Autres options
 foxtrick.prefs.smallcopyicons=Petites icônes pour les copies dans l'en-tête des pages concernées
