*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8914 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -265,7 +265,10 @@ foxtrick.TransferCompareSort.desc=Ajoute le tri des résultats des comparaisons 
 foxtrick.ForumStripHattrickLinks.desc=Supprime le serveur des liens internes pour les rendre utilisables dans les forums.
 foxtrick.ForumStripHattrickLinks.NoConfirmStripping.desc=Pas de confirmation avant le changement des liens.
 foxtrick.RapidId.desc=Ajoute une zone de selection à la page principale pour rechercher par leur identifiant les équipes, les joueurs, etc...
+foxtrick.MyMonitor.TeamIcons.desc=Afficher le logo des équipes
 foxtrick.MarkAllAsRead.desc=Un bouton pour marquer tous les sujets dans tous les forums comme lus
+foxtrick.ShowLineupSet.LineupSet.desc=Mettre en évidence les équipes qui ont préparé leur composition
+foxtrick.MobileEnhancements.desc=Ensemble d'améliorations pour les appareils mobiles
 foxtrick.MatchOrderInterface.Specialties.desc=Montrer les spécialités des joueurs
 foxtrick.MatchOrderInterface.SwapPositions.desc=Ajouter un lien pour permuter les joueurs de gauche à droite
 foxtrick.MatchSimulator.RatingsRight.desc=Affiche les prédictions sur la droite
@@ -315,6 +318,7 @@ foxtrick.TeamStats.Pictures.label=Photos
 foxtrick.TeamStats.PlayedLatest.label=A joué pendant le dernier match
 foxtrick.TeamStats.NotPlayedLatest.label=N'a pas joué pendant le dernier match
 foxtrick.TeamStats.HomeGrownPlayers.label=Joueurs de production locale
+foxtrick.TeamStats.FilterFor=Filtre pour
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -578,6 +582,7 @@ FriendliesGoals.abbr=BA
 CareerGoals=Buts dans sa carrière
 CareerGoals.abbr=BC
 Hattricks=Coups de chapeau
+Hattricks.abbr=HT
 
 Current_club=Équipe actuelle
 Current_club.abbr=Équipe
@@ -932,6 +937,8 @@ link.nightlySafari=Développement pour Safari
 link.recentChanges=Changements récents
 
 
+foxtrick.showReleaseNotes=Afficher les Notes de version après chaque mise à jour
+foxtrick.versionReleaseNotes=Afficher les notes de version pour \:
 
 about.copyright=Droit d'auteur
 about.developers=Développeurs
