*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8925 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -291,7 +291,7 @@ foxtrick.TeamPopupLinks.NextMatch.desc=المباراة القادمة
 foxtrick.TeamPopupLinks.AddNextMatch.desc=إضافة المباراة القادمة في HT Live
 foxtrick.TeamPopupLinks.YouthMatches.desc=مباريات الشباب
 foxtrick.TeamPopupLinks.Coach.desc=المدرب
-foxtrick.TeamPopupLinks.CustomLink.desc=روابط مخصصة. الرموز [userid] و [teamid] سيتم إستبدالها بالأرقام الأصلية.
+foxtrick.TeamPopupLinks.CustomLink.desc=روابط مخصصة في خطوط منفصلة. الرموز [رقم المستخدم] و [رقم الفريق] سوف تستبدل بالأرقام الفعلية.
 foxtrick.SkillColoring.desc=عرض أفضل للمهارات
 foxtrick.SkillColoring.skill_color.desc=تلوين المهارات
 foxtrick.SkillColoring.only_skill_color.desc=تلوين المهارات فقط
