--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -57,7 +57,7 @@ foxtrick.CopyMatchID.desc=Copies the match id when clicking on the league/cup/fr
 foxtrick.CrossTable.desc=Adds an extra table to Fixtures, where all results on league matches are presented including line graph of league positions
 foxtrick.MovePlayerSelectbox.desc=Moves players select box up on players detail page
 #MoveManagerOnline
-foxtrick.TeamPopupLinks.CustomLink.desc=Custom links. The tags [UserID] and [TeamID] will be replaced by the actual IDs.
+foxtrick.TeamPopupLinks.CustomLink.desc=Custom links in seperate lines. The tags [UserID] and [TeamID] will be replaced by the actual IDs. Example\: {"link"\:"http\://example.com/[teamid]", "title"\:"example link", "more"\: false, "newTab"\:true}
 foxtrick.SkillColoring.skill_color.desc=Colourises skills
 foxtrick.SkillColoring.only_skill_color.desc=Colourises skills only and not personalities, fan mood etc.
 foxtrick.SkillColoring.skill_number_translated.desc=Show skills also translated to English and as number e.g. gut (solid 7)
