--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -13,6 +13,11 @@
 <item>Уколико желите да вам Фокстрик не приказује обавештење о променама после сваког ажурирања искључите опцију "Прикажи поруку о променама после ажурирања Фокстрика" у табу <xhtml:a href="#tab=main">"Главне опције"</xhtml:a>.</item>
 </note>
 
+<note version="0.9.1">
+<item>● <module>TeamPopupLinks</module>: Промењен формат за постављање персонализованих линкова</item>
+<item>● <module>MatchSimulator</module>: Поправка за копирање оцена делова терена</item>
+</note>
+
 <note version="0.9.0.4">
 <item><xhtml:b>Промене у верзији Фокстрик 0.9.0.4</xhtml:b></item>
 <item>● Колекција линкова <module>Links</module> пребачена на други сервер</item>
