*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8938 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sl/foxtrick.properties
+++ b/content/locale/sl/foxtrick.properties
@@ -146,6 +146,7 @@ foxtrick.SkillTable.ColouredYouth.desc=Pokaži obarvane sposobnosti mladincev
 foxtrick.CountryList.desc=Spremembe imen držav
 foxtrick.CountryList.SelectBoxes.desc=Zamenja angleška imena držav in jih nadomesti z izvirnimi
 foxtrick.YouthPromotes.desc=Pokaže dneve do sprejema mladinca
+foxtrick.HighlightOwnerless.desc=Označi ekipe brez lastnikov na strani serije.
 foxtrick.LiveAlert.desc=Pokaži obvestila za gole na HT Live
 foxtrick.LiveAlert.Sound.desc=Tudi zvočno opozorilo
 foxtrick.SeriesFlags.Guestbook.desc=Pokaži v knjigi gostov
@@ -801,10 +802,13 @@ foxtrick.log.header=FoxTrick dnevnik
 # keep the following line untranslated
 
 status.active=aktivno
+status.enabled=omogočeno, ampak ni aktivno na %s
+status.disabled=onemogočeno
 
 
 # tabs in preferences page
 #tabs
+tab.main=Glavno
 tab.on_page=Moduli na tej strani
 tab.universal=Univerzalni moduli
 tab.informationAggregation=Združevanje informacij
@@ -813,9 +817,14 @@ tab.presentation=Predstavitev
 tab.matches=Tekme
 tab.forum=Forum
 tab.links=Povezave
+tab.alert=Opozorilo
+tab.about=O nas
 tab.changes=Spremembe
 tab.help=Pomoč
 
+foxtrick.prefs.setup=Nastavitev
+foxtrick.prefs.setup.desc=To so nastavitve, ki jih je FoxTrick zaznal. Če so napačne, {prosimo sporočite}.
+foxtrick.prefs.setup.locale=Področne nastavitve
 foxtrick.prefs.setup.dateFormat=Oblika datuma
 foxtrick.prefs.setup.country=Država
 
