*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8942 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ko/foxtrick.properties
+++ b/content/locale/ko/foxtrick.properties
@@ -292,6 +292,7 @@ foxtrick.TeamPopupLinks.NextMatch.desc=다음 경기
 foxtrick.TeamPopupLinks.AddNextMatch.desc=HT Live에 다음 경기 추가
 foxtrick.TeamPopupLinks.YouthMatches.desc=유소년 경기
 foxtrick.TeamPopupLinks.Coach.desc=코치
+foxtrick.TeamPopupLinks.CustomLink.desc=별도의 라인 안에 커스텀 링크. [userid]과 [teamid]은 실제 ID로 대체될 겁니다. 예\: {"link"\:"http\://example.com/[teamid]", "title"\:"example link", "more"\: false, "newTab"\:true}
 foxtrick.SkillColoring.desc=더 낳은 스킬 시각화
 foxtrick.SkillColoring.skill_color.desc=스킬 컬러화
 foxtrick.SkillColoring.only_skill_color.desc=성격, 팬 분위기 등을 제외한 스킬만 컬러화.
