*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8944 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sl/foxtrick.properties
+++ b/content/locale/sl/foxtrick.properties
@@ -149,6 +149,7 @@ foxtrick.YouthPromotes.desc=Pokaže dneve do sprejema mladinca
 foxtrick.HighlightOwnerless.desc=Označi ekipe brez lastnikov na strani serije.
 foxtrick.LiveAlert.desc=Pokaži obvestila za gole na HT Live
 foxtrick.LiveAlert.Sound.desc=Tudi zvočno opozorilo
+foxtrick.OldStyleFace.desc=Pokaže obraze v starem Hattrickovem slogu
 foxtrick.SeriesFlags.Guestbook.desc=Pokaži v knjigi gostov
 foxtrick.HTMSPoints.AddToPlayer.desc=Pokaži na igralčevi strani
 foxtrick.HTMSPoints.AddToPlayerList.desc=Pokaži na strani igralcev
@@ -372,19 +373,33 @@ categories.IM=IM
 categories.FW=FW
 
 match.pos.kp=Vratar
+match.pos.kp.abbr=VR
 match.pos.lb=Zadnji levi
+match.pos.lb.abbr=LB
 match.pos.lcd=Levi centralni branilec
+match.pos.lcd.abbr=LCD
 match.pos.mcd=Srednji centralni branilec
+match.pos.mcd.abbr=MCD
 match.pos.rcd=Desni centralni branilec
+match.pos.rcd.abbr=RCD
 match.pos.rb=Zadnji desni
+match.pos.rb.abbr=RB
 match.pos.lw=Levo krilo
+match.pos.lw.abbr=LW
 match.pos.lcm=Levi centralni vezist
+match.pos.lcm.abbr=LCM
 match.pos.mcm=Srednji centralni vezist
+match.pos.mcm.abbr=MCM
 match.pos.rcm=Desni centralni vezist
+match.pos.rcm.abbr=RCM
 match.pos.rw=Desno krilo
+match.pos.rw.abbr=RW
 match.pos.lf=Levi napadalec
+match.pos.lf.abbr=LF
 match.pos.mf=Srednji napadalec
+match.pos.mf.abbr=CF
 match.pos.rf=Desni napadalec
+match.pos.rf.abbr=RF
 
 match.role.setPieces=Izvajalec prostih strelov
 match.role.setPieces.abbr=SP
