--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -13,15 +13,14 @@
 <item>Уколико желите да вам Фокстрик не приказује обавештење о променама после сваког ажурирања искључите опцију "Прикажи поруку о променама после ажурирања Фокстрика" у табу <xhtml:a href="#tab=main">"Главне опције"</xhtml:a>.</item>
 </note>
 
-<note version="0.9.1">
+<note version="0.9.0.5">
+<item><xhtml:b>Промене у верзији Фокстрик 0.9.0.5</xhtml:b></item>
 <item>● <module>TeamPopupLinks</module>: Промењен формат за постављање персонализованих линкова</item>
 <item>● <module>MatchSimulator</module>: Поправка за копирање оцена делова терена</item>
 <item>● Модул MatchTables уклоњен пошто га нико више не користи</item>
 <item>● Поправљено линковање подешавања "foxtrick://"</item>
 <item>● Још неке поправке ради испуњавања стандарда за Фирефокс екстензије AMO</item>
-</note>
-
-<note version="0.9.0.4">
+<item></item>
 <item><xhtml:b>Промене у верзији Фокстрик 0.9.0.4</xhtml:b></item>
 <item>● Колекција линкова <module>Links</module> пребачена на други сервер</item>
 <item>● Додати текстуални описи за догађаје на мечу на енглеском језику у модулу <module>MatchReportFormat</module></item>
