--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -17,9 +17,12 @@
 <item><xhtml:b>Промене у верзији Фокстрик 0.9.0.5</xhtml:b></item>
 <item>● <module>TeamPopupLinks</module>: Промењен формат за постављање персонализованих линкова</item>
 <item>● <module>MatchSimulator</module>: Поправка за копирање оцена делова терена</item>
+<item>● <module>NewMail</module>: враћена опција за звучно обавештење</item> 
 <item>● Модул MatchTables уклоњен пошто га нико више не користи</item>
 <item>● Поправљено линковање подешавања "foxtrick://"</item>
-<item>● Још неке поправке ради испуњавања стандарда за Фирефокс екстензије AMO</item>
+<item>● <module>MatchSimulator</module> умањење због кондиције: приказује текстуалне оцене заокружене и бројчане без заокруживања</item>
+<item>● Колекција линкова <module>Links</module> пребачена на други сервер</item>
+<item>● Још неке поправке ради испуњавања стандарда за Фајерфокс екстензије - AMO</item>
 <item></item>
 <item><xhtml:b>Промене у верзији Фокстрик 0.9.0.4</xhtml:b></item>
 <item>● Колекција линкова <module>Links</module> пребачена на други сервер</item>
