*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8956 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -257,7 +257,9 @@ foxtrick.ContextMenuCopy.HtMl.desc=Option zum Kopieren des ausgewählten Bereich
 foxtrick.ContextMenuCopy.Table.desc=Option zum Kopieren von Tabellen in HT-ML
 foxtrick.NewMail.desc=Deutlicheres Hervorheben des Eintreffens neuer Mails
 foxtrick.NewMail.NotifyMail.desc=Popup bei neuer HT-Post
+foxtrick.NewMail.NotifyMailSound.desc=Zusätzlich mit Alarmton
 foxtrick.NewMail.NotifyForum.desc=Popup bei Forenantworten
+foxtrick.NewMail.NotifyForumSound.desc=Zusätzlich mit Alarmton
 foxtrick.CopyYouth.desc=Kopierfunktionen für Jugendreports und Seitenquellen
 foxtrick.CopyYouth.TrainingReport.desc=Trainingsreport
 foxtrick.CopyYouth.ScoutComment.desc=Scoutkommentar
