--- a/content/locale/en/foxtrick.properties
+++ b/content/locale/en/foxtrick.properties
@@ -55,6 +55,8 @@ foxtrick.SkinPlugin.desc=Adds your own CSS skin to Hattrick
 #CopyMatchID
 foxtrick.CopyMatchID.desc=Copies the match id when clicking on the league/cup/friendly/tournament icon on matches or matches archive page. For supporters works as well on the 'Head to Head' page ('Latest matches' and 'History' tabs).
 foxtrick.CrossTable.desc=Adds an extra table to Fixtures, where all results on league matches are presented including line graph of league positions
+foxtrick.NewMail.NotifyMailSound.desc=Also alert with a sound
+foxtrick.NewMail.NotifyForumSound.desc=Also alert with a sound
 foxtrick.MovePlayerSelectbox.desc=Moves players select box up on players detail page
 #MoveManagerOnline
 foxtrick.TeamPopupLinks.CustomLink.desc=Custom links in seperate lines. The tags [UserID] and [TeamID] will be replaced by the actual IDs. Example\: {"link"\:"http\://example.com/[teamid]", "title"\:"example link", "more"\: false, "newTab"\:true}
