Russian translation update to r8958
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8959 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ru/release-notes.xml
+++ b/content/locale/ru/release-notes.xml
@@ -14,6 +14,24 @@
 	</note>
 
 	<note version="0.9.0.5>
+		<item><xhtml:b>Обновление 0.9.0.5</xhtml:b></item>
+		<item>● Модуль <module>TeamPopupLinks</module>: изменён формат хранения собственных ссылок.</item>
+		<item>● Модуль <module>MatchSimulator</module>: исправлено копирование рейтингов.</item>
+		<item>● Модуль <module>NewMail</module>: вновь добавлена возможность звуковых уведомлений.</item>
+		<item>● Модуль MatchTables был удалён, т.к. его никто не использовал.</item>
+		<item>● Исправление стилей вида "foxtrick://" в настройках.</item>
+		<item>● Учёт выносливости в модуле <module>MatchSimulator</module>: Округлённые значения показаны текстом и неокруглённые - числом.</item>
+		<item>● Ресурс со ссылками перемещён на другой сервер.</item>
+		<item>● Некоторые внутренние изменения для улучшения совместимости с <xhtml:a href="https://addons.mozilla.org">AMO</xhtml:a>.</item>
+		<item></item>
+		<item><xhtml:b>Обновление 0.9.0.4</xhtml:b></item>
+		<item>● Ресурс со ссылками перемещён на другой сервер.</item>
+		<item>● Добавлены английские текстовые подписи к значкам матчевых событий в модуле <module>MatchReportFormat</module>.</item>
+		<item>● Модули <module>MatchReportFormat</module> и <module>MatchPlayerColoring</module> включены для матчей турниров.</item>
+		<item></item>
+		<item><xhtml:b>Обновление 0.9.0.3</xhtml:b></item>
+		<item>● Несколько модулей исправлены для соответствия изменениям в страницаъ HT.</item>
+		<item></item>
 		<item><xhtml:b>Обновление 0.9.0.2</xhtml:b></item>
 		<item>● Поддержка последних версий Chrome, ранее приводивших к фатальному сбою браузера в модуле <module>LoyaltyDisplay</module>.</item>
 		<item>● Поправлены ссылки на игроков в окне расстановки для юношеских команд в модуле <module>MatchReportFormat</module>.</item>
