*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8960 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -257,7 +257,9 @@ foxtrick.ContextMenuCopy.HtMl.desc=Opcija za kopiranje odabranog sadržaja u HT-
 foxtrick.ContextMenuCopy.Table.desc=Opcija za kopiranje tablice u HT-ML
 foxtrick.NewMail.desc=Istaknuti u slučaju primitka nove pošte
 foxtrick.NewMail.NotifyMail.desc=Prikaži obavijest ako ima novih poruka za vas
+foxtrick.NewMail.NotifyMailSound.desc=Također upozori zvukom
 foxtrick.NewMail.NotifyForum.desc=Prikaži obavijest ako ima novih odgovora na forumu za vas
+foxtrick.NewMail.NotifyForumSound.desc=Također upozori zvukom
 foxtrick.CopyYouth.desc=Kopiraj funkcije za juniorska izvješća
 foxtrick.CopyYouth.TrainingReport.desc=Dodati ikonu za kopiranje izvješća s treninga na stranici juniora
 foxtrick.CopyYouth.ScoutComment.desc=Dodati ikonu za kopiranje skautovog komentara na osobnoj stranici juniorskog igrača
