--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -23,6 +23,7 @@
 <item>● <module>MatchSimulator</module> умањење због кондиције: приказује текстуалне оцене заокружене и бројчане без заокруживања</item>
 <item>● Колекција линкова <module>Links</module> пребачена на други сервер</item>
 <item>● Још неке поправке ради испуњавања стандарда за Фајерфокс екстензије - AMO</item>
+<item>● <module>Matchreport</module> сада приказује текстуални опис типа догађаја кад се мишем пређе преко иконица(само на Енглеском језику)</item>
 <item></item>
 <item><xhtml:b>Промене у верзији Фокстрик 0.9.0.4</xhtml:b></item>
 <item>● Колекција линкова <module>Links</module> пребачена на други сервер</item>
@@ -32,6 +33,7 @@
 <item><xhtml:b>Промене у верзији Фокстрик 0.9.0.3</xhtml:b></item>
 <item>● Исправке за неколико модула после промена изгледа страница</item>
 <item></item>
+<item><xhtml:b>Промене у верзији Фокстрик 0.9.0.2</xhtml:b></item>
 <item>● Исправка за последњу верзију Chrome због које је модул <module>LoyaltyDisplay</module> блокирао</item>
 <item>● Поправљени линкови до поставе у мечу за омладинце у модулу <module>MatchReportFormat</module></item>
 <item>● <module>MatchSimulator</module> побољшана формула за утицај кондиције</item>
