*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8970 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -104,6 +104,7 @@ ForumYouthIcons.labelTournament=טורנירים
 Filters=מסננים
 Filters.noFilter=ללא סינון
 Filters.days=ימים
+Filters.Form=כושר משחק
 Filters.XP=ניסיון
 Filters.specialty=התמחות
 Filters.stars=כוכבים
@@ -274,6 +275,7 @@ MatchReportFormat.result=תוצאת המשחק
 foxtrick.matches.attackdefensebars=הגנה vs התקפה
 foxtrick.matches.right=ימנית
 foxtrick.matches.left=שמאלית
+foxtrick.matches.center=מרכזית
 foxtrick.matches.defense=הגנה
 foxtrick.matches.attack=התקפה
 
