--- a/content/locale/ka/foxtrick.properties
+++ b/content/locale/ka/foxtrick.properties
@@ -27,6 +27,7 @@
 #ExtendedPlayerDetails
 #ExtraShortcuts
 #CopyMatchID
+foxtrick.CopyMatchID.desc=მოახდინოს დაკოპირება მატჩის ID-ისა (საიდენტიფიკაციო  ნომერი), თუ დავაჭერ ლიგის, თასის, ამხანაგურის ან ნებისმიერი ჩემპიონატის მატჩზე. ეს უბრალოდ ის სიტყვებია, რომლებმაც სათარგმნი ტექსტის ლიმიტი უნდა  შეავსონ.
 #MoveManagerOnline
 #YouthSkillHideUnknown
 #HighlightCupwins
@@ -85,36 +86,146 @@
 
 
 #Skills
+Playmaking=ნახევარდაცვა
+Playmaking.abbr=ნახ.დაც
+Winger=ფლანგი
+Winger.abbr=ფლ
+Scoring=თავდასხმა
+Scoring.abbr=თავდ
+Passing=პასი
+Passing.abbr=პას
+Defending=დაცვა
+Defending.abbr=დაც
+Keeper=მეკარეობა
+Keeper.abbr=მეკ
+Set_pieces=სტანდარტულები
+Set_pieces.abbr=სტანდ
 
+PsicoTSI=PsicoTSI (საშუალო ფორმა)
+PsicoTSI.abbr=PsicoTSI
+HTMS_Ability.abbr=უნარი
 
 #note to translators. Copy abbreviations from HT translations using players page on HT (only supporters can see them in brackets next to players names)
 
+match.pos.rf.abbr=მარჯვენა ფორვარდი
+
+match.role.setPieces=სტანდარტისტი
+match.role.setPieces.abbr=სტანდ
+match.role.captain=კაპიტანი
+match.role.captain.abbr=კაპიტ.
+
+match.player.unknown=უცნობი მოთამაშე
 
 
+PlayerNumber=მოთამაშის ნომერი
+PlayerNumber.abbr=მოთ.ნომ
+
+TSI=სკილების ჯამური მაჩვენებელი
+TSI.abbr=TSI
 
 
+Aggressiveness=აგრესიული
+Aggressiveness.abbr=აგრეს
+Honesty=პატიოსანი
+Honesty.abbr=პატ
 
+Leadership=ლიდერობა
+Leadership.abbr=ლიდ
+Experience=გამოცდილება
+Experience.abbr=გამოც
 
+Stamina=გამძლეობა
+Stamina.abbr=გამძ
+Form=ფორმა
+Form.abbr=ფორ
 
+MotherClubBonus.abbr=მშ.კლ
 
+Status=სტატუსი
+Status.abbr=სტატ
 
+Yellow_card=ყვითელი ბარათი
+Yellow_card.abbr=ყვით
+Red_card=წითელი ბარათი
+Red_card.abbr=წით
 
+Speciality=სპეციალიზაცია
+Speciality.abbr=სპეც
 
-
-
-
+Last_match=უკანასკნელი მატჩი
+Last_match.abbr=უკ.მატჩ
+Last_position=უკანასკნელი პოზიცია
+Last_position.abbr=უკან.პოზიც
 #following string uses pluralForms
 
+Bruised=დაშავებული
+Bruised.abbr=დაშავ
+Injured=ტრავმირებული
+Injured.abbr=ტრავ
+
+Salary=ხელფასი
+Salary.abbr=ხელფ
+
+TransferListed=სატრანსფერო სია
+TransferListed.abbr=ტრანს.სია
+
+NrOfMatches=მატჩების რაოდენობა
+NrOfMatches.abbr=მატჩ.რაოდ
+LeagueGoals=ლიგის გოლები
+LeagueGoals.abbr=ლიგ.გოლ
+CupGoals=თასის გოლები
+CupGoals.abbr=თასის გოლები
+FriendliesGoals=ამხანაგურის გოლები
+FriendliesGoals.abbr=ამხ.გოლები
+CareerGoals=კარიერის გოლები
+CareerGoals.abbr=გოლები
+Hattricks=ჰეთთრიკი
+Hattricks.abbr=HT
+
+Current_club=ახლანდელი კლუბი
+Current_club.abbr=კლუბი
+Current_league=ახლანდელი ლიგა
+Current_league.abbr=ლიგა
 
 
+Hotlist=Hotlist
+Hotlist.abbr=Hotlist
 
-
-
-
-
+skilltable.youthplayer=ახალგაზრდა მოთამაშე
 
 #matchdetail
+foxtrick.matchdetail.midfield=ნახევარდაცვა
+foxtrick.matchdetail.attack=შეტევა
+foxtrick.matchdetail.defence=დაცვა
+foxtrick.matchdetail.total=სულ
+foxtrick.shortcut.matchlineup=სამატჩო განლაგება
 
+foxtrick.matchdetail.right=მარჯვენა
+foxtrick.matchdetail.left=მარცხენა
+foxtrick.matchdetail.rightshort=R
+foxtrick.matchdetail.centershort=C
+foxtrick.matchdetail.leftshort=L
+foxtrick.matchdetail.ifkshort=I
+foxtrick.bidconfirmation=ნამდვილად გსურთ დაბიდოთ ეს ფეხბურთელი? მისი ამჟამინდელი ფასია %s.
+foxtrick.tlconfirmation=ნამდვილად გსურთ, დაატრანსფეროთ ეს ფეხბურთელი? მოთხოვნადი ფასია %s.
+foxtrick.staffconfirmationhire=ნამდვილად გსურთ, დაიქირაოთ %num %kind?
+foxtrick.staffconfirmationsack=ნამდვილად გსურს to sak %num %kind?
+foxtrick.ntremoveconfirmation=ნამდვილად გსურთ ამ მოთამაშის დამატება/მოშორება?
+foxtrick.conferences.signaturetoggle=ხელმოწერა
+foxtrick.conferences.markunread=მონიშნე აქედან უნახავი
+foxtrick.tweaks.selectplayer=მოთამაშის არჩევა
+foxtrick.linkscustom.selecticon=ნიშნის/იკონკის არჩევა
+foxtrick.linkscustom.addpersonallink=პერსონალური ლინკის დამატება
+foxtrick.linkscustom.addlink=ლინკის დამატება
+foxtrick.linkscustom.remove=მოშორება/მოშლა
+foxtrick.linkscustom.copy=კოპირება
+foxtrick.linkscustom.export=ექსპორტი
+foxtrick.linkscustom.confirmremove=ნამდვილად მოვაშორო?
+foxtrick.linkscustom.addtag=ტეგის დამატება
+foxtrick.linkscustom.tags=ტეგები
+foxtrick.linkscustom.help=დახმარება
+foxtrick.matches.income=შემოსავალი\:
+foxtrick.tweaks.BirthdayToday=დღევანდელი დაბადების დღე
 
 
 #following string uses pluralForms
@@ -131,61 +242,146 @@
 
 
 
+foxtrick.tweaks.copyskilltable=სკილების ცხრილის კოპირება to clipboard (HT-ML-ში)
+foxtrick.tweaks.skilltablecopied=სკილების ცხრილი [post\=%s] დაკოპირდა to the clipboard.
+foxtrick.tweaks.matchidcopied=მატჩის ID [post\=%s] დაკოპირდა to the clipboard.
+foxtrick.tweaks.postidcopied=პოსტის ნომერი [post\=%s] დაკოპირდა to the clipboard.
+foxtrick.tweaks.youthstatistics=ახალგაზრდულის სტატისტიკა ht-ys.org
 
 #matches
+foxtrick.matches.right=მარჯვენა
+foxtrick.matches.left=მარცხენა
+foxtrick.matches.center=ნახევარდაცვა
+foxtrick.matches.defense=დაცვა
+foxtrick.matches.attack=შეტევა
 
 # NOTE TO TRANSLATORS
 # Look on your Matches page (Club -> Matches -> pick a match)  to the lowest right box title to see how you should translate the string below
+foxtrick.matches.suppstats=მხარდამჭერის სტატისტიკა
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
+copy.link=ლინკის კოპირება HT-ML-ში
+copy.ht-ml=კოპირება HT-ML-ში
+copy.table=ცხრილის კოპირება HT-ML-ში
 
 #teampopups
+Manager=მენეჯერი
+Team=გუნდი
+Matches=მატჩები
+Players=მოთამაშეები
+last_5_ips=ბოლო 5 შემოსვლა
+Guestbook=სტუმართა წიგნი
+SendMessage=შეტყობინების გაგზავნა
+Challenge=გამოწვევა
+Achievements=მიღწევები
+TransferHistory=ტრანსფერების ისტორია
+TeamHistory=კლუბის ისტორია
+NextMatch=შემდეგი მატჩი
+AddNextMatch=შემდეგი მატჩის დამატება HT-LIVE-ში
+YouthMatches=ახალგაზრდული მატჩები
+more=მეტი...
+less=ნაკლები...
+TeamPopupLinks.prefsCaption=ლინკის პარამეტრები
+TeamPopupLinks.ShowByDefault=ჩვენება სტანდარტულად
+TeamPopupLinks.ShowOnMore=ჩვენება სხვებისაც
+TeamPopupLinks.OpenNewTab=გახსნა ახალ გვერდზე
 
+total_stars=ვარსკვლავების რაოდენობა
 
 # FlagCollectionToMap
+foxtrick.FlagCollectionToMap.ShowMap=რუკის ჩვენება
+foxtrick.FlagCollectionToMap.HideMap=რუკის დამალვა
+foxtrick.FlagCollectionToMap.Africa=აფრიკა
+foxtrick.FlagCollectionToMap.Asia=აზია
+foxtrick.FlagCollectionToMap.Europe=ევროპა
+foxtrick.FlagCollectionToMap.MEast=ახლო აღმოსავლეთი
+foxtrick.FlagCollectionToMap.SAmerica=სამხრეთ ამერიკა
+foxtrick.FlagCollectionToMap.World=მსოფლიო
 
 # SkillTable
+Skill_table=სკილების ცხრილი
 
+Nationality=ეროვნება
+Nationality.abbr=ეროვნება
+Flag=დროშა
 
 
 
 
 
 # TransferSearchResultFilters
+TransferSearchResultFilters.hideInjured=დამალე ტრავმიანი
+TransferSearchResultFilters.hideSuspended=დამალე დისკვალიფ
+TransferSearchResultFilters.days=დღეები\:
 
 # refer to transfer search form
+minimum=მინიმუმ
+maximum=მაქსიმუმი
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 
 # SkillTable
+foxtrick.SkillTable.Switch_view_title=სამაგიდო ხედზე გადართვა. რა არის არ ვიცი.
+foxtrick.SkillTable.detach=მოხსნა
 
 # HTMSPrediction
+HTMSPrediction.winDrawLoss=მოგება/ფრე/წაგება
+HTMSPrediction.title=მატჩის ანალიზი HTMS-ის მიხედვით
+HTMSPrediction.changePrediction=პროგნოზების შეცვლა
+HTMSPrediction.team=გუნდი
 
 #htms table of statistical truth
+truthTable.name=გუნდი
+truthTable.real_position=რეალური/აქტუალური პოზიცია.
+truthTable.real_points=რეალური/ამჟამინდელი ქულები
+truthTable.predicted_points=პროგნოზირებული ქულები
 
 # HTMSPoints
+HTMSPoints=HTMS ქულები\:
 
 # CrossTable
+CrossTable.graph=სეზონის ცხრილი
 # will be shown as "R13" denoting round 13
 
 # MyMonitor
 #following string uses pluralForms
+MyMonitor.removeTeam=აირჩიე მოსაშორებელი გუნდი\:
 # %n, %t and %i will be replaced by team name, type and ID respectively
+MyMonitor.type.senior=უმცროსი
+MyMonitor.type.youth=ახალგაზრდული
+MyMonitor.type.nt=ეროვნული
 
 # MarkAllAsRead
 
 # TickerAlert
+TickerAlert.enable=გააქტიურება
 
 # tickers
+ticker.type.challenge=გამოწვევა
+ticker.type.guestbook=სტუმართა წიგნი
+ticker.type.mail=ჰეთთრიკის მეილი
+ticker.type.myht=ჩემი ჰეთთრიკის მესიჯები
 
 # LocalTime
+LocalTime.hattrick=ჰეთთრიკის დრო
+LocalTime.hattrick.title=ჰეთთრიკის დრო. დააჭირე საათის მაჩვენებელს ადგილობრივ დროზე გადასართავად.
+LocalTime.local=ადგილობრივი დრო
 
 # Links
 
 #actions
+Copy=კოპირება
+View=ხედვა/ჩვენება
+sort.up=ზემოთ/მაღლა
+sort.down=ქვემოთ
+action.clearCache=კეშის გასუფთავება
 
 # fennec ui
+pageAction.rightSidebar=მარჯვენა პანელის ჩვენება
+pageAction.mainContent=ძირითადი შინაარსის ჩვენება
+pageAction.leftSidebar=მარცხენა მხარის ჩვენება
+pageAction.all=ყველას ჩვენება
 
 # buttons
 
@@ -217,5 +413,6 @@
 
 
 
+foxtrick.prefs.permissionsHint=%s სჭირდება თქვენი ნებართვა სამუშაოდ. მიეცით მას ნებართვა შემდეგ დიალოგში. თუ არ დაეთანხმებით ამ მოდულს, მაშინ იგი გაუქმდება.
 
 ###EOF
