--- a/content/locale/ko/release-notes.xml
+++ b/content/locale/ko/release-notes.xml
@@ -23,6 +23,7 @@
 <item>● MatchSimulator 체력 효과: 텍스트는 반올림하고 수치는 반올림되지 않고 표시합니다</item>
 <item>● 링크 리소스를 아직까지 다른 서버로 이전되었습니다</item>
 <item>● AMO 규정 개선을 위한 몇 가지 내부 변화</item>
+<item>● 이제 Matchreport는 모든 이벤트에 대한 풍선말을 표시합니다</item>
 <item></item>
 <item><xhtml:b>0.9.0.4 업데이트</xhtml:b></item>
 <item>● 링크 리소스를 다른 서버로 이전되었습니다</item>
