*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8977 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -258,7 +258,9 @@ foxtrick.ContextMenuCopy.HtMl.desc=Optie om geselecteerde inhoud in HT-ML te kop
 foxtrick.ContextMenuCopy.Table.desc=Optie om een tabel in HT-ML te kopiëren
 foxtrick.NewMail.desc=Laat duidelijker zien dat je nieuwe mail hebt
 foxtrick.NewMail.NotifyMail.desc=Laat een melding zien als er nieuwe berichten voor je zijn
+foxtrick.NewMail.NotifyMailSound.desc=Geef ook een waarschuwing met geluid
 foxtrick.NewMail.NotifyForum.desc=Laat een melding zien als er nieuwe forum berichten voor je zijn
+foxtrick.NewMail.NotifyForumSound.desc=Geef ook een waarschuwing met geluid
 foxtrick.CopyYouth.desc=Kopieer functies voor jeugd trainingsrapporten en broncodes
 foxtrick.CopyYouth.TrainingReport.desc=Trainings rapport
 foxtrick.CopyYouth.ScoutComment.desc=Scout bericht
@@ -839,7 +841,7 @@ CopyYouth.goto=Ga naar %s
 
 MatchReportFormat.MatchReport=Wedstrijdverslag
 MatchReportFormat.lineup=Opstelling
-MatchReportFormat.kickOff=Start signaal
+MatchReportFormat.kickOff=Beginsignaal
 MatchReportFormat.halfTime=Rust
 MatchReportFormat.fullTime=Einde wedstrijd
 MatchReportFormat.extraTime=Extra tijd
